移植了通用处理