@@ -2,12 +2,12 @@ package com.wintercogs.beyonddimensions.DataBase.Handler;
 
 import com.wintercogs.beyonddimensions.DataBase.Stack.ChemicalStackType;
 import mekanism.api.Action;
-import mekanism.api.chemical.ChemicalStack;
-import mekanism.api.chemical.IChemicalHandler;
+import mekanism.api.chemical.gas.GasStack;
+import mekanism.api.chemical.gas.IGasHandler;
 
 import java.util.List;
 
-public class ChemicalStackTypedHandler implements IChemicalHandler
+public class ChemicalStackTypedHandler implements IGasHandler
 {
 
     private StackTypedHandler handlerStorage;
@@ -17,7 +17,7 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     }
 
     @Override
-    public int getChemicalTanks()
+    public int getTanks()
     {
         List<Integer> slots = handlerStorage.getTypeIdIndexList(ChemicalStackType.ID);
         if(slots != null)
@@ -26,7 +26,7 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     }
 
     @Override
-    public ChemicalStack getChemicalInTank(int tank)
+    public GasStack getChemicalInTank(int tank)
     {
         // 此处的slot参数是基于特化类型ItemStackType的索引
         List<Integer> slots = handlerStorage.getTypeIdIndexList(ChemicalStackType.ID);
@@ -38,14 +38,14 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
 
         if(actualIndex != -1)
         {
-            return (ChemicalStack) handlerStorage.getStackBySlot(actualIndex).getStack();
+            return (GasStack) handlerStorage.getStackBySlot(actualIndex).getStack();
         }
-        else return ChemicalStack.EMPTY;
+        else return GasStack.EMPTY;
     }
 
     // 直接设置指定槽位化学品
     @Override
-    public void setChemicalInTank(int tank, ChemicalStack stack)
+    public void setChemicalInTank(int tank, GasStack stack)
     {
         int actualIndex = -1;
         actualIndex = handlerStorage.getTypeIdIndexList(ChemicalStackType.ID).get(tank);
@@ -54,58 +54,64 @@ public class ChemicalStackTypedHandler implements IChemicalHandler
     }
 
     @Override
-    public long getChemicalTankCapacity(int tank)
+    public long getTankCapacity(int tank)
     {
         return 64000L;
     }
 
     @Override
-    public boolean isValid(int tank, ChemicalStack stack)
+    public boolean isValid(int tank, GasStack stack)
     {
         return true;
     }
 
     @Override
-    public ChemicalStack insertChemical(int tank, ChemicalStack stack, Action action)
+    public GasStack insertChemical(int tank, GasStack stack, Action action)
     {
         if(stack.isEmpty())
-            return ChemicalStack.EMPTY;
+            return GasStack.EMPTY;
         long remaining = handlerStorage.insert(handlerStorage.getTypeIdIndexList(ChemicalStackType.ID).get(tank),new ChemicalStackType(stack.copy()), action.simulate()).getStackAmount();
         if(remaining>0)
-            return stack.copyWithAmount(remaining);
-        return ChemicalStack.EMPTY;
+            return new GasStack(stack, remaining);
+        return GasStack.EMPTY;
     }
 
     @Override
-    public ChemicalStack extractChemical(int tank, long amount, Action action)
+    public GasStack extractChemical(int tank, long amount, Action action)
     {
         return ((ChemicalStackType)handlerStorage.extract(handlerStorage.getTypeIdIndexList(ChemicalStackType.ID).get(tank),amount,action.simulate()))
                 .copyStack();
     }
 
     @Override
-    public ChemicalStack insertChemical(ChemicalStack stack, Action action)
+    public GasStack insertChemical(GasStack stack, Action action)
     {
         if(stack.isEmpty())
-            return ChemicalStack.EMPTY;
+            return GasStack.EMPTY;
         long remaining = handlerStorage.insert(new ChemicalStackType(stack.copy()), action.simulate()).getStackAmount();
         if(remaining>0)
-            return stack.copyWithAmount(remaining);
-        return ChemicalStack.EMPTY;// 始终全部插入
+            return new GasStack(stack, remaining);
+        return GasStack.EMPTY;// 始终全部插入
     }
 
     @Override
-    public ChemicalStack extractChemical(long amount, Action action)
+    public GasStack extractChemical(long amount, Action action)
     {
-        int actualIndex = handlerStorage.getTypeIdIndexList(ChemicalStackType.ID).getFirst();
+        int actualIndex = handlerStorage.getTypeIdIndexList(ChemicalStackType.ID).get(0);
         return ((ChemicalStackType)handlerStorage.extract(handlerStorage.getStackBySlot(actualIndex).copy(),action.simulate()))
                 .copyStack();
     }
 
     @Override
-    public ChemicalStack extractChemical(ChemicalStack stack, Action action)
+    public GasStack extractChemical(GasStack stack, Action action)
     {
         return ((ChemicalStackType)handlerStorage.extract(new ChemicalStackType(stack.copy()),action.simulate()))
                 .copyStack();
+    }
+
+    @Override
+    public GasStack getEmptyStack()
+    {
+        return GasStack.EMPTY;
     }
 }
